# Explaining-Predictions-of-Machine-Learning-Models

./: .gitattributes  .gitignore  HOW_TO_RUN.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: additional_dataset_discovery_report.md  config_guide.md  dataset_preprocessing_metrics_overview.md  dataset_preprocessing_report.md  label_relationship_discovery_report.md  multimodal_genre_pipeline_plan.md  neural_text_encoder_research.md  results_sections_outline.md  xai_research.md
notebooks/: README.md  best_model_test_inference_colab.ipynb  final_test_xai_all_models_colab.ipynb  global_xai_best_neural_colab.ipynb  training_pipeline_classic_ml_colab.ipynb  training_pipeline_control.ipynb  training_pipeline_neural_colab.ipynb
outputs/dataset_discovery/: additional_discovery_manifest.json  exact_genre_combinations.csv  label_cardinality_distribution.csv  label_cooccurrence_communities.csv  label_cooccurrence_network_edges.csv  label_frequency_groups.csv  most_frequent_words_per_genre.csv  poster_visual_statistics_by_genre.csv  rare_exact_genre_combinations_count1_sample.csv
outputs/final_xai_analysis/: final_xai_analysis.html  final_xai_analysis_summary.json
outputs/splits/: split_metadata.json  test_indices.npy  train_indices.npy  val_indices.npy
scripts/: build_report.py  create_splits.py  final_xai_analysis.py  inspect_dataset.py  run_from_notebook_example.py  run_global_xai.py  run_xai.py  train_classic.py  train_models.py  train_neural.py  xai_dashboard.py
src/mmimdb/: __init__.py  constants.py  data.py  perf.py  (+11 more)
(+460 files in other folders)
