[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmimdb-pipeline"
version = "0.1.0"
description = "Multimodal IMDb genre classification pipeline with XAI-ready preprocessing."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
